@@ -257,6 +257,8 @@ v2.0.0
 - Introduce native integration for sd-event
 - Add method to get currently processed message also to `IConnection`
 - Add Slot-returning overloads of `callMethodAsync()` functions
+- Add Slot-returning overload of `addObjectManager` to the `IObject`
+- Add Slot-returning overload of `addObjectManager` to the `IConnection`
 - `[[nodiscard]]` attribute has been added to relevant API methods.
 - Add new `SDBUSCPP_SDBUS_LIB` CMake configuration variable determining which sd-bus library shall be picked
 - Switch to C++20 standard (but C++20 is not required, and the used C++20 features are conditionally compiled)
